# common-cxx

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Collection.hpp  Collection.i  CollectionConfig.cpp  CollectionConfig.hpp  CollectionConfig.i  ComponentMetaData.cpp  ComponentMetaData.hpp  ComponentMetaData.i  ConfigBase.cpp  ConfigBase.hpp  ConfigBase.i  Coordinate.i  CsTypes.i  Date.cpp  Date.hpp  Date.i  Doxyfile  DoxygenLayout.xml  EngineBase.cpp  EngineBase.hpp  EngineBase.i  EntityMetaData.hpp  EntityMetaDataBuilder.hpp  EvidenceBase.cpp  EvidenceBase.hpp  EvidenceBase.i  Exceptions.cpp  Exceptions.hpp  Exceptions.i  FiftyoneDegrees.hpp  IpAddress.cpp  IpAddress.hpp  IpAddress.i  JavaTypes.i  MapStringStringIterator.i  MetaData.cpp  MetaData.hpp  (+118 more)
.github/workflows/: nightly-pipeline-prerelease.yml  nightly-pipeline.yml  nightly-pr-to-main.yml  nightly-prs-to-main.yml  nightly-publish-main.yml  scheduler.yml
VisualStudio/: Application++.Build.props  Application.Build.props  FiftyOne.Common.sln  Library++.Build.props  Library.Build.overridable.props  Library.Build.props
VisualStudio/Cache/: Cache.vcxproj  Cache.vcxproj.filters
VisualStudio/FiftyOne.Common.C/: FiftyOne.Common.C.vcxproj  FiftyOne.Common.C.vcxproj.filters
VisualStudio/FiftyOne.Common.CPP/: FiftyOne.Common.CPP.vcxproj  FiftyOne.Common.CPP.vcxproj.filters
VisualStudio/Fiftyone.Common.Tests/: Fiftyone.Common.Tests.vcxproj  Fiftyone.Common.Tests.vcxproj.filters
ci/: README.md  build-and-test.yml  build-environment.ps1  build-project.ps1  create-tag.yml  deploy.yml  fetch-assets.ps1  get-next-package-version.ps1  install-package.ps1  job-linux-test.yml  job-mac-test.yml  options.json  run-integration-tests.ps1  run-performance-tests.ps1  run-unit-tests.ps1  setup-environment.ps1  shared-build-and-test-stages.yml  shared-steps-cmake-test.yml  shared-steps-windows-test-cmake.yml  shared-variables.yml  steps-cmake-test.yml  steps-windows-test-cmake.yml  steps-windows-test-vs.yml
cmake/: FindGccAtomic.cmake  linux-aarch64-cross.cmake  linux-armhf-cross.cmake  mac-arm64-cross.cmake
docs/: tagfile
docs/4.1/: _collection_8hpp_source.html  _collection_config_8hpp_source.html  _component_meta_data_8hpp_source.html  _config_base_8hpp_source.html  _date_8hpp_source.html  _engine_base_8hpp_source.html  _entity_meta_data_8hpp_source.html  _entity_meta_data_builder_8hpp_source.html  _evidence_base_8hpp_source.html  _exceptions_8hpp_source.html  _fiftyone_degrees_8hpp_source.html  _meta_data_8hpp_source.html  _profile_meta_data_8hpp_source.html  _property_meta_data_8hpp_source.html  _required_properties_config_8hpp_source.html  _results_base_8hpp_source.html  _value_8hpp_source.html  _value_meta_data_8hpp_source.html  array_8h_source.html  cache_8h_source.html  class_fiftyone_degrees_1_1_common_1_1_collection-members.html  class_fiftyone_degrees_1_1_common_1_1_collection.html  class_fiftyone_degrees_1_1_common_1_1_collection_config-members.html  class_fiftyone_degrees_1_1_common_1_1_collection_config.html  class_fiftyone_degrees_1_1_common_1_1_component_meta_data-members.html  class_fiftyone_degrees_1_1_common_1_1_component_meta_data.html  class_fiftyone_degrees_1_1_common_1_1_config_base-members.html  class_fiftyone_degrees_1_1_common_1_1_config_base.html  class_fiftyone_degrees_1_1_common_1_1_date-members.html  class_fiftyone_degrees_1_1_common_1_1_date.html  class_fiftyone_degrees_1_1_common_1_1_engine_base-members.html  class_fiftyone_degrees_1_1_common_1_1_engine_base.html  class_fiftyone_degrees_1_1_common_1_1_entity_meta_data-members.html  class_fiftyone_degrees_1_1_common_1_1_entity_meta_data.html  class_fiftyone_degrees_1_1_common_1_1_entity_meta_data_builder-members.html  class_fiftyone_degrees_1_1_common_1_1_entity_meta_data_builder.html  class_fiftyone_degrees_1_1_common_1_1_evidence_base-members.html  class_fiftyone_degrees_1_1_common_1_1_evidence_base.html  class_fiftyone_degrees_1_1_common_1_1_evidence_exception-members.html  class_fiftyone_degrees_1_1_common_1_1_evidence_exception.html  (+237 more)
docs/4.1/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+43 more)
interop/dotnet/: CMakeLists.txt
interop/dotnet/FiftyoneDegrees.Common/: Common.cs  CommonPINVOKE.cs  FiftyoneDegrees.Common.csproj  FiftyoneDegrees.Common.sln  MapStringStringSwig.cs  Transform.cs  VectorStringSwig.cs
interop/dotnet/example/TransformExample/: Program.cs  TransformExample.csproj  TransformExample.sln
performance/: CachePerf.c
tests/: .gitignore  Base.cpp  Base.hpp  CacheTests.cpp  CollectionConfigTests.cpp  CollectionOffsetTests.cpp  CollectionTests.cpp  CoordinateTests.cpp  DoubleTests.cpp  EngineTests.cpp  EngineTests.hpp  EvidenceTests.cpp  EvidenceTests.hpp  EvidenceWithHeadersTests_MultipleHeaders.cpp  EvidenceWithHeadersTests_NoHeaders.cpp  EvidenceWithHeadersTests_SingleHeader.cpp  ExampleTests.cpp  ExampleTests.hpp  FileHandle.cpp  FileHandle.hpp  FileTests.cpp  FixedSizeCollection.hpp  FloatTests.cpp  HeadersContainer.cpp  HeadersTests.cpp  IpAddressTests.cpp  IpHeaderParserTests.cpp  IpParserTests.cpp  JsonTests.cpp  MemoryLeakTests.cpp  OverridesTests.cpp  PoolTests.cpp  ProfileTests.cpp  PropertiesTests.cpp  PropertyMetaDataTests.cpp  PropertyTests.cpp  PseudoHeaderTests.cpp  PseudoHeaderTests.hpp  RequiredPropertiesConfigTests.cpp  ResourceManagerTests.cpp  (+19 more)
